--- a/src/assets/styles/_scene.scss
+++ b/src/assets/styles/_scene.scss
@@ -4,7 +4,6 @@
     width: 100vw;
     top: 0;
     left: 0;
-    z-index: -1;
 
     & .scene__image {
         aspect-ratio: 16 / 9;
@@ -19,5 +18,10 @@
         top: 0;
         -o-object-fit: contain;
         object-fit: contain;
+        z-index: -1;
+    }
+
+    & .scene__load-area-btn {
+        z-index: 10;
     }
 }
